feat: enhance analytics functionality with UTM parameters and improve test coverage